--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,25 @@
+# Maven generated files
+target/
+MANIFEST.MF
+overlays/
+
+# Compiled files
 *.class
 
-# Package Files #
+# Packages
 *.jar
-*.war
-*.ear
+*.zip
+
+# Eclipse files
+*.classpath
+*.project
+*.settings
+
+# IntelliJ IDEA files
+.idea/
+*.iml
+/.metadata
+/Servers*
+
+# OS files
+.DS_Store
